kubernetes/ingress/keycloak-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-https-redirect
  namespace: keycloak
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-proxy-headers
  namespace: keycloak
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Forwarded-Host: keycloak.ebruno.fr
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-redirect
  namespace: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`keycloak.ebruno.fr`)
      kind: Rule
      middlewares:
        - name: keycloak-https-redirect
      services:
        - name: keycloak-http
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingress
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.ebruno.fr`)
      kind: Rule
      middlewares:
        - name: keycloak-proxy-headers
      services:
        - name: keycloak-http
          port: 80
  tls:
    certResolver: letsencrypt-ovh
